FBT.Generator/Parser/Grammar/FBTParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from G:\Users\txt\Source\Repos\FBTC1\FBT.Generator\Parser\Grammar\FBT.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class FBTParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, NUMBER=21, FLOAT=22, UNQUOTED_STRING=23, 
		QUOTED_STRING=24, QUOTED_IMPORT=25, CommentDirective=26, WS=27, HEX=28;
	public const int
		RULE_frostbiteType = 0, RULE_includeBlock = 1, RULE_include = 2, RULE_typeData = 3, 
		RULE_typeNamespace = 4, RULE_typeModule = 5, RULE_classAttributes = 6, 
		RULE_typeAttributes = 7, RULE_typeAttribute = 8, RULE_basicTypeAttribute = 9, 
		RULE_numeralTypeAttribute = 10, RULE_typeEnum = 11, RULE_enumName = 12, 
		RULE_enumData = 13, RULE_enumValuePair = 14, RULE_typeClass = 15, RULE_classTypeName = 16, 
		RULE_classInherrits = 17, RULE_classInherrit = 18, RULE_typeValueType = 19, 
		RULE_valueTypeIdentifier = 20, RULE_valueTypeName = 21, RULE_structureData = 22, 
		RULE_memberData = 23, RULE_memberVisibility = 24, RULE_memberTypeName = 25, 
		RULE_memberArrayType = 26, RULE_memberName = 27, RULE_memberOffset = 28, 
		RULE_typePrimitive = 29, RULE_primitiveTypeName = 30, RULE_numeral = 31;
	public static readonly string[] ruleNames = {
		"frostbiteType", "includeBlock", "include", "typeData", "typeNamespace", 
		"typeModule", "classAttributes", "typeAttributes", "typeAttribute", "basicTypeAttribute", 
		"numeralTypeAttribute", "typeEnum", "enumName", "enumData", "enumValuePair", 
		"typeClass", "classTypeName", "classInherrits", "classInherrit", "typeValueType", 
		"valueTypeIdentifier", "valueTypeName", "structureData", "memberData", 
		"memberVisibility", "memberTypeName", "memberArrayType", "memberName", 
		"memberOffset", "typePrimitive", "primitiveTypeName", "numeral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", "'include'", "'namespace'", "';'", "'module'", "','", "'['", 
		"']'", "'('", "')'", "'enum'", "'{'", "'}'", "'='", "'class'", "':'", 
		"'valuetype'", "'struct'", "'public'", "'primitive'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "NUMBER", "FLOAT", 
		"UNQUOTED_STRING", "QUOTED_STRING", "QUOTED_IMPORT", "CommentDirective", 
		"WS", "HEX"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FBT.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FBTParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FBTParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FBTParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FrostbiteTypeContext : ParserRuleContext {
		public IncludeBlockContext includeBlock() {
			return GetRuleContext<IncludeBlockContext>(0);
		}
		public TypeDataContext[] typeData() {
			return GetRuleContexts<TypeDataContext>();
		}
		public TypeDataContext typeData(int i) {
			return GetRuleContext<TypeDataContext>(i);
		}
		public ITerminalNode Eof() { return GetToken(FBTParser.Eof, 0); }
		public FrostbiteTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_frostbiteType; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterFrostbiteType(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitFrostbiteType(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFrostbiteType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FrostbiteTypeContext frostbiteType() {
		FrostbiteTypeContext _localctx = new FrostbiteTypeContext(Context, State);
		EnterRule(_localctx, 0, RULE_frostbiteType);
		int _la;
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 64; includeBlock();
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__6) | (1L << T__10) | (1L << T__14) | (1L << T__16) | (1L << T__17))) != 0)) {
					{
					{
					State = 65; typeData();
					}
					}
					State = 70;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 72;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 71; typeData();
					}
					}
					State = 74;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__4) | (1L << T__6) | (1L << T__10) | (1L << T__14) | (1L << T__16) | (1L << T__17))) != 0) );
				State = 76; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeBlockContext : ParserRuleContext {
		public IncludeContext[] include() {
			return GetRuleContexts<IncludeContext>();
		}
		public IncludeContext include(int i) {
			return GetRuleContext<IncludeContext>(i);
		}
		public IncludeBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_includeBlock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterIncludeBlock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitIncludeBlock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncludeBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeBlockContext includeBlock() {
		IncludeBlockContext _localctx = new IncludeBlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_includeBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 80; include();
				}
				}
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncludeContext : ParserRuleContext {
		public ITerminalNode QUOTED_IMPORT() { return GetToken(FBTParser.QUOTED_IMPORT, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_include; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterInclude(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitInclude(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncludeContext include() {
		IncludeContext _localctx = new IncludeContext(Context, State);
		EnterRule(_localctx, 4, RULE_include);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; Match(T__0);
			State = 87; Match(T__1);
			State = 88; Match(QUOTED_IMPORT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDataContext : ParserRuleContext {
		public TypeNamespaceContext typeNamespace() {
			return GetRuleContext<TypeNamespaceContext>(0);
		}
		public TypeModuleContext typeModule() {
			return GetRuleContext<TypeModuleContext>(0);
		}
		public TypeClassContext typeClass() {
			return GetRuleContext<TypeClassContext>(0);
		}
		public TypeEnumContext typeEnum() {
			return GetRuleContext<TypeEnumContext>(0);
		}
		public TypeValueTypeContext typeValueType() {
			return GetRuleContext<TypeValueTypeContext>(0);
		}
		public TypePrimitiveContext typePrimitive() {
			return GetRuleContext<TypePrimitiveContext>(0);
		}
		public TypeDataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeData; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterTypeData(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitTypeData(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeData(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDataContext typeData() {
		TypeDataContext _localctx = new TypeDataContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeData);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90; typeNamespace();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 91; typeModule();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 92; typeClass();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 93; typeEnum();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 94; typeValueType();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 95; typePrimitive();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeNamespaceContext : ParserRuleContext {
		public ITerminalNode UNQUOTED_STRING() { return GetToken(FBTParser.UNQUOTED_STRING, 0); }
		public TypeNamespaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeNamespace; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterTypeNamespace(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitTypeNamespace(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeNamespace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeNamespaceContext typeNamespace() {
		TypeNamespaceContext _localctx = new TypeNamespaceContext(Context, State);
		EnterRule(_localctx, 8, RULE_typeNamespace);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; Match(T__2);
			State = 99; Match(UNQUOTED_STRING);
			State = 100; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeModuleContext : ParserRuleContext {
		public ITerminalNode UNQUOTED_STRING() { return GetToken(FBTParser.UNQUOTED_STRING, 0); }
		public TypeModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeModule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterTypeModule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitTypeModule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeModuleContext typeModule() {
		TypeModuleContext _localctx = new TypeModuleContext(Context, State);
		EnterRule(_localctx, 10, RULE_typeModule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(T__4);
			State = 103; Match(UNQUOTED_STRING);
			State = 104; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassAttributesContext : ParserRuleContext {
		public TypeAttributeContext[] typeAttribute() {
			return GetRuleContexts<TypeAttributeContext>();
		}
		public TypeAttributeContext typeAttribute(int i) {
			return GetRuleContext<TypeAttributeContext>(i);
		}
		public ClassAttributesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classAttributes; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterClassAttributes(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitClassAttributes(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassAttributes(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassAttributesContext classAttributes() {
		ClassAttributesContext _localctx = new ClassAttributesContext(Context, State);
		EnterRule(_localctx, 12, RULE_classAttributes);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; typeAttribute();
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 107; Match(T__5);
				State = 108; typeAttribute();
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeAttributesContext : ParserRuleContext {
		public TypeAttributeContext[] typeAttribute() {
			return GetRuleContexts<TypeAttributeContext>();
		}
		public TypeAttributeContext typeAttribute(int i) {
			return GetRuleContext<TypeAttributeContext>(i);
		}
		public TypeAttributesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeAttributes; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterTypeAttributes(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitTypeAttributes(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeAttributes(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeAttributesContext typeAttributes() {
		TypeAttributesContext _localctx = new TypeAttributesContext(Context, State);
		EnterRule(_localctx, 14, RULE_typeAttributes);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; Match(T__6);
			State = 115; typeAttribute();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 116; Match(T__5);
				State = 117; typeAttribute();
				}
				}
				State = 122;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 123; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeAttributeContext : ParserRuleContext {
		public NumeralTypeAttributeContext numeralTypeAttribute() {
			return GetRuleContext<NumeralTypeAttributeContext>(0);
		}
		public BasicTypeAttributeContext basicTypeAttribute() {
			return GetRuleContext<BasicTypeAttributeContext>(0);
		}
		public TypeAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeAttribute; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterTypeAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitTypeAttribute(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeAttributeContext typeAttribute() {
		TypeAttributeContext _localctx = new TypeAttributeContext(Context, State);
		EnterRule(_localctx, 16, RULE_typeAttribute);
		try {
			State = 127;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125; numeralTypeAttribute();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 126; basicTypeAttribute();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BasicTypeAttributeContext : ParserRuleContext {
		public ITerminalNode UNQUOTED_STRING() { return GetToken(FBTParser.UNQUOTED_STRING, 0); }
		public BasicTypeAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_basicTypeAttribute; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterBasicTypeAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitBasicTypeAttribute(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBasicTypeAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BasicTypeAttributeContext basicTypeAttribute() {
		BasicTypeAttributeContext _localctx = new BasicTypeAttributeContext(Context, State);
		EnterRule(_localctx, 18, RULE_basicTypeAttribute);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129; Match(UNQUOTED_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumeralTypeAttributeContext : ParserRuleContext {
		public ITerminalNode UNQUOTED_STRING() { return GetToken(FBTParser.UNQUOTED_STRING, 0); }
		public NumeralContext numeral() {
			return GetRuleContext<NumeralContext>(0);
		}
		public NumeralTypeAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numeralTypeAttribute; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterNumeralTypeAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitNumeralTypeAttribute(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumeralTypeAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumeralTypeAttributeContext numeralTypeAttribute() {
		NumeralTypeAttributeContext _localctx = new NumeralTypeAttributeContext(Context, State);
		EnterRule(_localctx, 20, RULE_numeralTypeAttribute);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131; Match(UNQUOTED_STRING);
			State = 132; Match(T__8);
			State = 133; numeral();
			State = 134; Match(T__9);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeEnumContext : ParserRuleContext {
		public EnumNameContext enumName() {
			return GetRuleContext<EnumNameContext>(0);
		}
		public TypeAttributesContext typeAttributes() {
			return GetRuleContext<TypeAttributesContext>(0);
		}
		public EnumDataContext[] enumData() {
			return GetRuleContexts<EnumDataContext>();
		}
		public EnumDataContext enumData(int i) {
			return GetRuleContext<EnumDataContext>(i);
		}
		public TypeEnumContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeEnum; } }
		public override void EnterRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.EnterTypeEnum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IFBTListener typedListener = listener as IFBTListener;
			if (typedListener != null) typedListener.ExitTypeEnum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFBTVisitor<TResult> typedVisitor = visitor as IFBTVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeEnum(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeEnumContext typeEnum() {
		TypeEnumContext _localctx = new TypeEnumContext(Context, State);
		EnterRule(_localctx, 22, RULE_typeEnum);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 136; typeAttributes();
				}
			}

			State = 139; Match(T__10);
			State = 140; enumName();
			State = 141; Match(T__11);
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==UNQUOTED_STRING) {
				{
				{
				State = 142; enumData();
				}
				}
				State = 147;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 148; Match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
